[package]
name = "pallet-poe"
version = "0.1.0"
description = "A FRAME pallet for a custom Proof-Of-exsitence (POE) service"
authors = ['Simon Jiao <simonejiaoh@gmail.com>']
license = 'Unlicense'
publish = false
repository = "https://github.com/simonjiao/substrate-node-template"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-12'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
]
try-runtime = ['frame-support/try-runtime']
